--- a/package.json
+++ b/package.json
@@ -14,34 +14,34 @@
     "bower": "^1.3.12",
     "browser-sync": "^2.8.2",
     "colors": "^1.1.0",
-    "del": "^1.1.1",
+    "del": "^1.2.1",
     "event-stream": "^3.3.1",
     "express": "^4.10.4",
     "glob": "^3.2.9",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.1.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-batch": "^1.0.5",
     "gulp-concat": "^2.5.2",
     "gulp-css-flipper": "^1.0.2",
     "gulp-cssbeautify": "^0.1.3",
-    "gulp-csscomb": "^3.0.3",
+    "gulp-csscomb": "^3.0.6",
     "gulp-data": "^1.2.0",
     "gulp-file": "^0.2.0",
     "gulp-folders": "^1.1.0",
     "gulp-header": "^1.2.2",
-    "gulp-less": "3.0.1",
-    "gulp-minify-css": "^0.3.11",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
     "gulp-plumber": "0.6.6",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.2",
     "gulp-size": "^1.0.0",
     "gulp-tap": "^0.1.3",
     "gulp-template": "^3.0.0",
     "gulp-uglifyjs": "^0.4.4",
     "gulp-util": "^3.0.1",
-    "gulp-zip": "^2.0.3",
-    "lodash": "^2.4.1",
-    "merge-stream": "^0.1.6",
+    "gulp-zip": "^3.0.2",
+    "lodash": "^3.10.1",
+    "merge-stream": "^1.0.0",
     "pretty-hrtime": "0.2.2",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0"
