--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.0",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "0.6.6",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.2",
@@ -39,6 +40,7 @@
     "gulp-template": "^3.0.0",
     "gulp-uglifyjs": "^0.4.4",
     "gulp-util": "^3.0.1",
+    "gulp-wrap": "^0.11.0",
     "gulp-zip": "^3.0.2",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
