--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,17 @@
 {
   "name": "Fabric",
-  "author": "Office Fabric Team",
+  "author": "Office UI Fabric Team",
   "version": "0.10.3",
-  "description": "A front-end framework for building experiences for Office 365.",
-  "license": "n/a",
+  "description": "The front-end framework for building experiences for Office 365.",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OfficeDev/Office-UI-Fabric"
+  },
   "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components"
-  ],
-  "dependencies": {
-  }
+  ]
 }
