--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-size": "^1.0.0",
     "gulp-tap": "^0.1.3",
     "gulp-template": "^3.0.0",
+    "gulp-uglify": "^1.4.0",
     "gulp-uglifyjs": "^0.4.4",
     "gulp-util": "^3.0.1",
     "gulp-wrap": "^0.11.0",
